# static_data

./: .clang-format  .gitignore  LICENSE  clang_flags.txt  gcc_flags.txt  meson.build
include/static_data/: static_data.hpp  static_json.hpp
native-files/: linux_base.ini  linux_clang.ini  linux_gcc.ini
test/: static_data_test.cpp  static_json.cpp  static_type_test.cpp
